# native_ocr_py

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
native_code/osx/: CMakeLists.txt
native_code/osx/include/: apple_ocr.h
native_code/osx/src/: apple_ocr.m  ocr_native.c
src/native_ocr/: __init__.py  types.py
src/native_ocr/ext/: __init__.py  _ocr_native.pyi
tests/: conftest.py  test_ocr.py
